<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/subject_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/raleway_semibold"
            android:maxLines="2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/subject_attendance_progressbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Maths" />

        <TextView
            android:id="@+id/total_classes_attended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject_name"
            tools:text="Attended: 1000/1000" />

        <TextView
            android:id="@+id/status_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toStartOf="@+id/cancelled_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_classes_attended"
            tools:text="On Track" />

        <ProgressBar
            android:id="@+id/subject_attendance_progressbar"
            android:layout_width="88dp"
            android:layout_height="76dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:indeterminateOnly="false"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:progressDrawable="@drawable/progress_bar_green" />

        <TextView
            android:id="@+id/subject_progressbar_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semibold"
            app:layout_constraintBottom_toBottomOf="@id/subject_attendance_progressbar"
            app:layout_constraintEnd_toEndOf="@id/subject_attendance_progressbar"
            app:layout_constraintStart_toStartOf="@id/subject_attendance_progressbar"
            app:layout_constraintTop_toTopOf="@id/subject_attendance_progressbar"
            tools:text="75%" />

        <ImageButton
            android:id="@+id/cancelled_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_circle_bg"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/class_cancelled"
            android:drawablePadding="16dp"
            android:src="@drawable/ic_minus"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bunked_button"
            app:layout_constraintTop_toBottomOf="@id/subject_attendance_progressbar" />

        <ImageButton
            android:id="@+id/bunked_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_circle_bg"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/bunked_class"
            android:src="@drawable/ic_cancel"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/attended_button"
            app:layout_constraintTop_toBottomOf="@id/subject_attendance_progressbar" />

        <ImageButton
            android:id="@+id/attended_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_circle_bg"
            android:backgroundTint="@color/green"
            android:contentDescription="@string/attended_class"
            android:src="@drawable/ic_check"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subject_attendance_progressbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>